Tiger_frontend/project1_test_code_example/tests/errors/function-call-param-missing.tiger
main let
        function print ( t:int) begin
                printi(7);
        end;
in begin
        print();
end
